Layout bug fixes

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ section.colored h1, section.colored h2, section.colored h3, section.colored h4, 
 .btn, .filter a { font-family: "Lato", sans-serif; font-weight: 400; font-size: 14px; text-decoration: none; background: #F7F6F6; color: #b6b7b7; border: 1px solid #b6b7b7; padding: 18px; -webkit-transition: all 0.3s ease-in, 0s; -moz-transition: all 0.3s ease-in, 0s; -o-transition: all 0.3s ease-in, 0s; -ms-transition: all 0.3s ease-in, 0s; transition: all 0.3s ease-in, 0s; }
 .btn:hover, .filter a:hover, .btn:focus, .filter a:focus { background-color: #00A5E7; border-color: #00A5E7; color: white; }
 
-.borderBtn, .contactform button { font-family: "Lato", sans-serif; font-weight: 700; font-size: 14px; text-decoration: none; color: #F7F6F6; border: 1px solid white; padding: 18px 50px 18px 50px; display: inline-block; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; -webkit-transition: all 0.3s ease-in, 0s; -moz-transition: all 0.3s ease-in, 0s; -o-transition: all 0.3s ease-in, 0s; -ms-transition: all 0.3s ease-in, 0s; transition: all 0.3s ease-in, 0s; }
+.borderBtn, .contactform button { font-family: "Lato", sans-serif; font-weight: 700; font-size: 14px; text-decoration: none; color: #F7F6F6; border: 1px solid white; padding: 18px 30px 18px 30px; display: inline-block; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; -webkit-transition: all 0.3s ease-in, 0s; -moz-transition: all 0.3s ease-in, 0s; -o-transition: all 0.3s ease-in, 0s; -ms-transition: all 0.3s ease-in, 0s; transition: all 0.3s ease-in, 0s; }
 .borderBtn:hover, .contactform button:hover, .borderBtn:focus, .contactform button:focus { background-color: #F7F6F6; color: #00A5E7; text-decoration: none; }
 
 section .centered { margin: 0 auto; float: none; }
@@ -34,7 +34,7 @@ img { max-width: 100%; height: auto; }
 .welcome-message .heading { padding: 18px 0px; }
 .welcome-message p { font-family: "Lato", sans-serif; font-size: 55px; color: white; -webkit-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); -moz-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); -o-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); -ms-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); }
 .welcome-message p.small { font-family: "Lato", sans-serif; font-size: 24px; color: white; }
-.welcome-message .borderBtn, .welcome-message .contactform button, .contactform .welcome-message button { margin: 30px 0; -webkit-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); -moz-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); -o-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); -ms-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); }
+.welcome-message .borderBtn, .welcome-message .contactform button, .contactform .welcome-message button { margin: 10px 0; -webkit-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); -moz-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); -o-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); -ms-text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); }
 .welcome-message .borderBtn:hover, .welcome-message .contactform button:hover, .contactform .welcome-message button:hover { -webkit-text-shadow: 0px 2px 5px transparent; -moz-text-shadow: 0px 2px 5px transparent; -o-text-shadow: 0px 2px 5px transparent; -ms-text-shadow: 0px 2px 5px transparent; text-shadow: 0px 2px 5px transparent; }
 
 /*  ---------------------
@@ -56,7 +56,7 @@ img { max-width: 100%; height: auto; }
 section.me { background: #F16272; color: #f7f8f8; padding: 70px 0; }
 section.fixed { padding: 120px 0; }
 section.me h1 { color: #00A5E7; }
-section.me .borderBtn {margin: 20px 0;}
+section.me .borderBtn {margin: 0;}
 
 /*  ---------------------
    |       SKILLS        |
@@ -74,7 +74,7 @@ section.skills h2, section.skills h4 { color: #00A5E7 !important; }
 /*  ---------------------
    |     EXPERIENCE      |
     ---------------------  */
-section.experience {background: #F16272; height: 700px;}
+section.experience {background: #F16272; height: 750px;}
 section.experience h2 {color: #F7F6F6;}
 .experience-line { float: left; width: 100%; padding: 50px 0 42px 0px;  }
 .experience-line ul { float: left; width: 100%; }
@@ -108,7 +108,7 @@ section.experience h2 {color: #F7F6F6;}
 /*  ---------------------
    |       SOCIAL        |
     ---------------------  */
-#social-network {background:url(../images/city.jpg) 80% no-repeat fixed; height: 350px; text-align: center; } 
+#social-network {background:url(../images/city.jpg) no-repeat fixed; height: 350px; text-align: center; } 
 #social-network h2 {font-size: 3em; margin: 45px 0; } 
 @media screen and (max-width: 480px) {
   #social-network h2 {font-size: 2em; }
